objects/Project_Timesheet__c.object
<CustomObject>
    <description>Tracks project status info</description>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Deselect if work will not be billed to the client.</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Name__c</fullName>
        <label>Consultant/Trainer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>Consultant__c</referenceTo>
        <relationshipLabel>Project Timesheets</relationshipLabel>
        <relationshipName>Project_Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Timesheets</relationshipLabel>
        <relationshipName>Project_Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Work__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Work</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <picklist>
            <picklistValues>
                <fullName>Presales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy - Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy - Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>For_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates to Project Manager that clarification is needed on whether time is billable, out of hours work or TimeBank hours.</inlineHelpText>
        <label>For Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Out_of_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Hours?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Timesheets</relationshipLabel>
        <relationshipName>Project_Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name_Text__c</fullName>
        <formula>P_Opportunity_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Opportunity Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must pick a project related to the customer</errorMessage>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Timesheets</relationshipLabel>
        <relationshipName>Project_Timesheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Kick-Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis &amp; Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Mangement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Scheduled implies work has not started yet.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timebank_time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timebank time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week_No__c</fullName>
        <description>Calculates the week number to help identify who hasn&apos;t entered a timesheet</description>
        <formula>Case(
MOD( DATE(YEAR(Date_of_Work__c), 1, 1) - DATE (1900, 1, 7), 7),
0, ( Date_of_Work__c- DATE(YEAR(Date_of_Work__c),1,1) + 3) /7, 
1, ( Date_of_Work__c- DATE(YEAR(Date_of_Work__c),1,1) + 4) /7, 
2, ( Date_of_Work__c- DATE(YEAR(Date_of_Work__c),1,1) + 5) /7, 
3, ( Date_of_Work__c- DATE(YEAR(Date_of_Work__c),1,1) + 6) /7, 
4, ( Date_of_Work__c- DATE(YEAR(Date_of_Work__c),1,1) + 7) /7, 
5, ( Date_of_Work__c- DATE(YEAR(Date_of_Work__c),1,1) + 1) /7, 
6, ( Date_of_Work__c- DATE(YEAR(Date_of_Work__c),1,1) + 2) /7, 
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Timesheet</label>
    <listViews>
        <fullName>My_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Work__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Consultant_Name__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>P_Opportunity_Name__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Timesheets</label>
    </listViews>
    <listViews>
        <fullName>Project_Hours</fullName>
        <columns>Consultant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Date_of_Work__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>Project Hours</label>
    </listViews>
    <listViews>
        <fullName>This_Month_s_timesheets</fullName>
        <columns>NAME</columns>
        <columns>Consultant_Name__c</columns>
        <columns>Date_of_Work__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Timebank_time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month&apos;s timesheets</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>Consultant_Name__c</columns>
        <columns>P_Opportunity_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Timesheets</label>
    </listViews>
    <nameField>
        <displayFormat>{DD}{MM}{YYYY}-{0}</displayFormat>
        <label>Project Timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Timesheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Description_manditory</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Description__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>You must enter a description</errorMessage>
    </validationRules>
</CustomObject>